--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
+        {
+            "type": "java",
+            "name": "App",
+            "request": "launch",
+            "mainClass": "App",
+            "projectName": "Roulette_8fbe2cbe"
+        },
         {
             "type": "java",
             "name": "Current File",
@@ -17,8 +23,7 @@
             "request": "launch",
             "mainClass": "App",
             "projectName": "Roulette_88e12a6f",
-            "vmArgs": "--module-path vmArgsLibs\\openjfx-22.0.2_windows-x64_bin-sdk\\javafx-sdk-22.0.2\\lib --add-modules javafx.controls,javafx.fxml --enable-preview"       
-
+            "vmArgs": "--module-path vmArgsLibs\\openjfx-22.0.2_windows-x64_bin-sdk\\javafx-sdk-22.0.2\\lib --add-modules javafx.controls,javafx.fxml --enable-preview"
         }
     ]
 }
