--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,14 @@
             "name": "App",
             "request": "launch",
             "mainClass": "App",
+            "projectName": "Roulette_570079f8",
+            "vmArgs": "--module-path vmArgsLibs\\openjfx-22.0.2_windows-x64_bin-sdk\\javafx-sdk-22.0.2\\lib --add-modules javafx.controls,javafx.fxml --enable-preview"
+        },
+        {
+            "type": "java",
+            "name": "App",
+            "request": "launch",
+            "mainClass": "App",
             "projectName": "Roulette_8fbe2cbe",
             "vmArgs": "--module-path vmArgsLibs\\openjfx-22.0.2_windows-x64_bin-sdk\\javafx-sdk-22.0.2\\lib --add-modules javafx.controls,javafx.fxml --enable-preview"
         },
